Removed debug css styling in structure_practice.html

--- a/structure_practice.html
+++ b/structure_practice.html
@@ -13,7 +13,7 @@
             --widthsizing: 300px;
         }
         html{
-            outline: 2px dashed red;
+            /* outline: 2px dashed red; */
             display: flex;
             justify-content: center;
             margin: 20px;
